--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,3 @@
-static String safePackageName(String prop) {
-    prop.replace("-lts", "")
-}
-
-static String safePackageVersion(String prop, String version, String ltsVersion) {
-    prop.contains("-lts") ? ltsVersion + ".LTS" : version
-}
-
-String safeExtGet(String prop, String fallback) {
-    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
-}
-
 apply plugin: 'com.android.library'
 
 buildscript {
@@ -27,7 +15,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        minSdkVersion safeExtGet('reactNativeFFmpegPackage', 'https').contains("-lts") ? 16 : 24
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 52
         versionName "0.5.2"
@@ -46,6 +34,6 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.arthenica:mobile-ffmpeg-' + safePackageName(safeExtGet('reactNativeFFmpegPackage', 'https')) + ':' + safePackageVersion(safeExtGet('reactNativeFFmpegPackage', 'https'), safeExtGet('mobileFFmpegVersion', '4.4'), safeExtGet('mobileFFmpegVersion', '4.4'))
+    implementation 'com.arthenica:mobile-ffmpeg-video:+'
     implementation 'com.facebook.react:react-native:+'
 }
